modified game to accept touch input vs form input - game was way to infuriating on mobile devices with all the keyboards popping up - the button was what I was originally trying to avoid but I like in practice better than the form input - removed unnecessary context and state - added retro games jcodes logo to header - reworked scss as box sizing and other factors of the reset were in the wrong elements or classes - this should fix the horizontal scroll bars experiened on some devices - a few theme and text color changes to make the app more uniform in design

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,41 +1,54 @@
-html {
-  margin: 0;
+* {
   padding: 0;
-  box-sizing: border-box;
-  text-size-adjust: 100%;
+  margin: 0;
+  box-sizing: border-box; }
+
+html {
+  font-size: 62.5%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%; }
+
+body {
+  font-size: 1.6rem;
+  font-family: 'Press Start 2P', cursive;
+  color: #ebebeb;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
+  background-color: #184209;
   background-image: url("/assets/oldScreen.png");
   min-height: 100vh;
-  min-width: 100vw;
-  background-color: #184209; }
-
-body {
-  margin: 0;
-  font-size: 62.5%;
-  font-family: 'Press Start 2P', cursive;
-  color: #ebebeb;
-  line-height: 1.2rem;
+  line-height: 1.6;
   letter-spacing: 0.1rem; }
 
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  line-height: 4rem; }
-  .header h1 {
-    font-size: 3rem;
-    text-shadow: 2px 2px 4px #030303;
-    text-align: center; }
+  padding: 1rem; }
+  .header > img {
+    width: 100px;
+    margin-left: 2rem; }
+  .header > div {
+    margin-right: 2rem;
+    text-shadow: 4px 4px 4px #030303;
+    color: #ebebeb; }
 
 .main {
-  font-size: 0.85rem;
+  font-size: 1.3rem;
   text-shadow: 2px 2px 2px #030303;
   margin: 0 auto;
-  max-width: 40rem;
-  padding: 1rem 1.11rem 1rem 1rem; }
+  max-width: 75rem;
+  padding: 1.5rem; }
+
+.hero {
+  font-size: 3rem;
+  color: #969696;
+  width: 100%;
+  text-align: center; }
+  .hero > h1 {
+    text-shadow: 4px 4px 4px #030303; }
 
 .levelDetails {
   display: flex;
@@ -43,17 +56,13 @@ body {
   justify-content: center;
   background-color: #030303;
   align-items: center;
-  padding: 0.65rem;
-  border: 3px solid #ccc;
+  padding: 2rem;
+  border: 3px solid #e8e8e8;
   border-radius: 8px;
-  font-size: 1.2rem;
+  font-size: 2rem;
   margin: 0 auto;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; }
-
-.error {
-  font-size: 1.4rem;
-  text-align: center; }
 
 .adventureText,
 .adventureResponse {
@@ -61,8 +70,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2rem;
-  padding: 1.3rem;
+  margin-bottom: 3rem;
+  padding: 2rem;
   color: #5afb10;
   background-color: #030303;
   border: 3px solid #ccc;
@@ -70,32 +79,21 @@ body {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; }
 
 .adventureResponse {
-  color: #ebebeb; }
+  color: #ebebeb;
+  padding: 2rem; }
+  .adventureResponse > .btn:not(:last-child) {
+    margin-bottom: 3rem; }
 
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem; }
-  form > input {
-    width: 95%;
-    background: none;
-    border: none;
-    border: 3px solid #ebebeb;
-    border-radius: 3px;
-    font-size: 1.6rem;
-    color: #5afb10;
-    margin-top: 1rem;
-    text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    padding: 0.5rem;
-    background: #666666; }
-
-.green-span {
-  color: #5afb10;
-  font-weight: bold; }
+.btn {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1.4rem;
+  background: #969696;
+  border: none;
+  color: #030303;
+  border: 3px solid #ebebeb;
+  border-radius: 5px;
+  padding: 1rem;
+  cursor: pointer; }
 
 .white-span {
-  color: #ebebeb;
-  font-weight: bold; }
+  color: #ebebeb; }
